--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,9 @@
     <title>my second github repo</title>
 </head>
 <body>
-    
+
+    <h1>i can push my code in github</h1>
+    <h2>Alhamdulillah i am success to push my code in github </h2>
+    <h2>new code changed</h2>
 </body>
 </html>
