--- a/index2.html
+++ b/index2.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <h1>i can push my code in github</h1>
     <h2>Alhamdulillah i am success to push my code in github </h2>
     <h2>new code changed</h2>
+    <p>more paragraph</p>
+    <p>i am coding and coding and coding and coding and coding and coding and coding and codingand coding</p>
 </body>
 </html>
