--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 
     <h1>i can push my code in github</h1>
     <h2>Alhamdulillah i am success to push my code in github </h2>
-    <h2>new code changed</h2>
+    <h2>new code changed to oranged</h2>
     <p>more paragraph</p>
     <p>i am coding and coding and coding and coding and coding and coding and coding and codingand coding</p>
 </body>
