--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>i can push my code in github</h1>
+    <h1>i can push my code in github.com</h1>
     <h2>Alhamdulillah i am success to push my code in github </h2>
     <h2>new code changed to oranged</h2>
     <p>more paragraph</p>
