--- a/index2.html
+++ b/index2.html
@@ -14,5 +14,6 @@
     <h2>new code changed to oranged</h2>
     <p>more paragraph</p>
     <p>i am coding and coding and coding and coding and coding and coding and coding and codingand coding</p>
+    <img src="mosque.jpg" alt="">
 </body>
 </html>
