--- a/index2.html
+++ b/index2.html
@@ -15,5 +15,6 @@
     <p>more paragraph</p>
     <p>i am coding and coding and coding and coding and coding and coding and coding and codingand coding</p>
     <img src="mosque.jpg" alt="">
+    <img src="New folder/download (1).jpg" alt="">
 </body>
 </html>
