added nature view

--- a/index2.html
+++ b/index2.html
@@ -16,5 +16,6 @@
     <p>i am coding and coding and coding and coding and coding and coding and coding and codingand coding</p>
     <img src="mosque.jpg" alt="">
     <img src="New folder/download (1).jpg" alt="">
+    <img src="1.jpg" alt="">
 </body>
 </html>
