--- a/index2.html
+++ b/index2.html
@@ -17,5 +17,12 @@
     <img src="mosque.jpg" alt="">
     <img src="New folder/download (1).jpg" alt="">
     <img src="1.jpg" alt="">
+    <p>paragraaaaaaaaaph</p>
+
+    <div>
+        <h3>New blog new blog</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro velit atque ipsa repellat dignissimos modi enim eius omnis. Minus porro obcaecati delectus, facilis vel odit quisquam fugit quam suscipit, magni officiis mollitia quasi doloribus? Harum pariatur ducimus odit maiores quia?</p>
+
+    </div>
 </body>
 </html>
