--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second github repo</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -17,5 +18,10 @@
     <img src="mosque.jpg" alt="">
     <img src="New folder/download (1).jpg" alt="">
     <img src="1.jpg" alt="">
+    <div>
+        <h3>new paragraph new paragraph</h3> 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur accusamus architecto veritatis necessitatibus ipsam dolores voluptates autem nisi quos repellat.</p>
+
+    </div>
 </body>
 </html>
